@@ -45,6 +45,7 @@ import java.util.logging.Logger;
 
 import org.restlet.Context;
 import org.restlet.data.CharacterSet;
+import org.restlet.data.Response;
 import org.restlet.resource.Representation;
 import org.restlet.resource.WriterRepresentation;
 
@@ -517,6 +518,7 @@ public final class ByteUtils {
             final Representation representation) throws IOException {
         final Pipe pipe = Pipe.open();
         final Context context = Context.getCurrent();
+        final Response response = Response.getCurrent();
 
         // Creates a thread that will handle the task of continuously
         // writing the representation into the input side of the pipe
@@ -525,6 +527,8 @@ public final class ByteUtils {
             public void run() {
                 try {
                     Context.setCurrent(context);
+                    Response.setCurrent(response);
+
                     WritableByteChannel wbc = pipe.sink();
                     representation.write(wbc);
                     wbc.close();
@@ -575,6 +579,7 @@ public final class ByteUtils {
         final PipedWriter pipedWriter = new PipedWriter();
         final PipedReader pipedReader = new PipedReader(pipedWriter);
         final Context context = Context.getCurrent();
+        final Response response = Response.getCurrent();
 
         // Creates a thread that will handle the task of continuously
         // writing the representation into the input side of the pipe
@@ -583,6 +588,8 @@ public final class ByteUtils {
             public void run() {
                 try {
                     Context.setCurrent(context);
+                    Response.setCurrent(response);
+
                     representation.write(pipedWriter);
                 } catch (IOException ioe) {
                     Logger.getLogger(ByteUtils.class.getCanonicalName()).log(
@@ -643,6 +650,7 @@ public final class ByteUtils {
         if (representation != null) {
             final PipeStream pipe = new PipeStream();
             final Context context = Context.getCurrent();
+            final Response response = Response.getCurrent();
 
             // Creates a thread that will handle the task of continuously
             // writing the representation into the input side of the pipe
@@ -651,6 +659,8 @@ public final class ByteUtils {
                 public void run() {
                     try {
                         Context.setCurrent(context);
+                        Response.setCurrent(response);
+
                         OutputStream os = pipe.getOutputStream();
                         representation.write(os);
                         os.write(-1);
